# jappl-staffclocker-backend

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pytest.ini  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  sonar-project.properties
.github/workflows/: test-coverage-deploy.yaml  test-coverage.yaml
diagram/: Makefile  sequential-diagram-project-flow.mmd  sequential-diagram-timelog-flow.mmd
jappl_staffclocker_backend/: asgi.py  settings.py  urls.py  wsgi.py
jappl_staffclocker_backend/exceptions/: invalid_token.py
jappl_staffclocker_backend/middlewares/: jwt_authentication_middleware.py
jappl_staffclocker_backend/serializer/: firebase_payload_serializer.py
jappl_time_log/: apps.py
jappl_time_log/migrations/: 0001_initial.py  0002_alter_timelog_hour_spent.py  0003_userdetail_is_super_admin_alter_userdetail_email_and_more.py  0004_alter_application_application_name.py  0005_remove_applicationpermission_u_user_application_and_more.py  0006_remove_userdetail_is_super_admin_and_more.py  0007_alter_userdetail_user_role.py  0008_remove_userdetail_user_role.py  0009_rename_project_id_projectmember_project_and_more.py  0010_remove_userdetail_password.py  0011_alter_project_project_name_alter_timelog_timestamp.py
jappl_time_log/models/: __init__.py  application_model.py  application_permission_model.py  base_model.py  example.py  project_member_model.py  project_model.py  task_member_model.py  task_model.py  time_log_model.py  user_detail_model.py
jappl_time_log/permissions/: employee_only_permission.py  (+4 more)
(+60 files in other folders)
